[package]
name = "zudp-poc"
version = "0.1.0"
edition = "2021"
description = "ZUDP-2026-001 — authorized defensive PoC harness for the zrtpserver short-datagram sleep-DoS"
license = "Proprietary"
publish = false

[[bin]]
name = "zudp-poc"
path = "src/main.rs"

# clap's default `color` feature drags in windows-sys (needs dlltool, absent from the
# bundled GNU toolchain), so we disable defaults and enable only what the CLI needs.
[dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
hdrhistogram = { version = "7", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Linux-only deps:
#  * libc     — sendmmsg batching + SO_SNDBUF fast send path (always on Linux).
#  * pnet     — source-IP spoofing / echo-loop seeding (behind the `spoof` feature).
# Both need CAP_NET_RAW only for the spoof path; sendmmsg needs no special privilege.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
pnet = { version = "0.35", optional = true }

[features]
default = []
spoof = ["dep:pnet"]

[profile.release]
opt-level = 3
lto = true
